skill section done

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           <button class="primary-btn">Download CV</button>
           <button class="secondary-btn">Contact</button>
         </div>
-        <img src="portfolio-resources-main/images/hardy.png">
+        <img id="banner-image" src="portfolio-resources-main/images/hardy.png">
       </div>
     </header>
     <main>
-      <section class="about-me">
+      <section class="about">
         <h3 class="section-title">About Me</h3>
-        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consectetur mollitia enim quas id debitis, ad commodi temporibus ipsam perferendis eos, aliquid magnam dolores, delectus sit corrupti sed accusamus soluta aliquid magnam dolores, delectus sit corrupti sed accusamus soluta!!</p>
+        <p class="section-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta harum animi ea qui veniam tempore neque quo praesentium, quas omnis ullam incidunt! Eaque ab pariatur quas quos inventore quasi non nisi maxime eius ad! Libero suscipit accusamus vitae non, quis soluta corporis porro dolorem ullam pariatur eveniet, quasi consequatur beatae est deserunt nesciunt odit hic id nihil voluptatibus ex unde dolore dolorum. Neque ex harum deleniti dicta, porro sed voluptatibus accusantium autem nulla, cum et inventore. Eaque velit neque rerum totam dolor. Maiores quos quia minima eaque labore facilis porro eum alias vitae odit recusandae exercitationem omnis, assumenda consequuntur ad!</p>
         <div class="about-info-container">
           <div class="about-info">
             <p class="info-type">Name:</p>
@@ -45,7 +45,7 @@
           </div>
           <div class="about-info">
             <p class="info-type">Date of Birth:</p>
-            <p class="info-description">16J 2000</p>
+            <p class="info-description">16 June 2000</p>
           </div>
           <div class="about-info">
             <p class="info-type">From:</p>
@@ -53,7 +53,163 @@
           </div>
         </div>
       </section>
+      <section class="skills">
+        <h3 class="section-title">My Skills</h3>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, laboriosam aperiam quasi cumque rem aspernatur laudantium? Temporibus, odit. Quod sint nesciunt placeat provident reprehenderit optio beatae nihil neque debitis consequuntur. Veniam incidunt autem corporis cumque! Incidunt nemo numquam dolore iure culpa? Tempore est in quia nobis fuga suscipit asperiores officiis quos dolore eos, amet ratione eveniet.</p>
+        <div class="skill-card-container">
+          <div class="card">
+            <img src="portfolio-resources-main/images/icons/js.png" alt="">
+            <div class="card-title">Vanilla JS</div>
+            <div class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, deserunt! Autem praesentium libero voluptate saepe quidem accusamus maxime reiciendis nam.</div>
+          </div>
+          <div class="card">
+            <img src="portfolio-resources-main/images/icons/react.png" alt="">
+            <div class="card-title">ReactJS</div>
+            <div class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, deserunt! Autem praesentium libero voluptate saepe quidem accusamus maxime reiciendis nam.</div>
+          </div>
+          <div class="card">
+            <img src="portfolio-resources-main/images/icons/nodejs.png" alt="">
+            <div class="card-title">NodeJS</div>
+            <div class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, deserunt! Autem praesentium libero voluptate saepe quidem accusamus maxime reiciendis nam.</div>
+          </div>
+          <div class="card">
+            <img src="portfolio-resources-main/images/icons/mongo.png" alt="">
+            <div class="card-title">MongoDB</div>
+            <div class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, deserunt! Autem praesentium libero voluptate saepe quidem accusamus maxime reiciendis nam.</div>
+          </div>
+        </div>
+      </section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <!-- <section class="skills-section">
+        <h3 class="section-title">Skills</h3>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consectetur mollitia enim quas id debitis, ad commodi temporibus ipsam perferendis eos, aliquid magnam dolores, delectus sit corrupti sed accusamus soluta aliquid magnam dolores, delectus sit corrupti sed accusamus soluta!!</p>
+        <div class="skills-details">
+          <div class="skill-card">
+            <img src="portfolio-resources-main/images/icons/js.png" alt="">
+            <h3 class="skill-card-title">Vanilla Javascript</h3>
+            <p class="skill-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea magnam nobis, quidem assumenda porro id laborum minus harum.</p>
+          </div>
+          <div class="skill-card">
+            <img src="portfolio-resources-main/images/icons/react.png" alt="">
+            <h3 class="skill-card-title">React</h3>
+            <p class="skill-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea magnam nobis, quidem assumenda porro id laborum minus harum.</p>
+          </div>
+          <div class="skill-card">
+            <img src="portfolio-resources-main/images/icons/nodejs.png" alt="">
+            <h3 class="skill-card-title">Node.js</h3>
+            <p class="skill-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea magnam nobis, quidem assumenda porro id laborum minus harum.</p>
+          </div>
+          <div class="skill-card">
+            <img src="portfolio-resources-main/images/icons/mongo.png" alt="">
+            <h3 class="skill-card-title">MongoDB</h3>
+            <p class="skill-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea magnam nobis, quidem assumenda porro id laborum minus harum.</p>
+          </div>
+        </div>
+      </section>
+      <section class="resume">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="resume-section">
+          
+          <div>
+            <h4 class="resume-section-name">My Education</h4>
+            <h5 class="resume-item-title">Master in Computer Engineering</h5>
+            <h5 class="resume-item-info">Harvard University / 2015 - 2017</h5>
+            <p class="resuem-item-des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet dignissimos sit libero rerum! Magni ex, aliquam odit molestias provident ab!</p>
+          </div>
+          <div>
+            <h4 class="resume-section-name">My Education</h4>
+            <h5 class="resume-item-title">Master in Computer Engineering</h5>
+            <h5 class="resume-item-info">Harvard University / 2015 - 2017</h5>
+            <p class="resuem-item-des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet dignissimos sit libero rerum! Magni ex, aliquam odit molestias provident ab!</p>
+          </div>
+          <div>
+            <h4 class="resume-section-name">My Education</h4>
+            <h5 class="resume-item-title">Master in Computer Engineering</h5>
+            <h5 class="resume-item-info">Harvard University / 2015 - 2017</h5>
+            <p class="resuem-item-des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet dignissimos sit libero rerum! Magni ex, aliquam odit molestias provident ab!</p>
+          </div>     
+          <div>
+
+            <h4 class="resume-section-name">My Experience</h4>
+            <h5 class="resume-item-title">Master in Computer Engineering</h5>
+            <h5 class="resume-item-info">Harvard University / 2015 - 2017</h5>
+            <p class="resuem-item-des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet dignissimos sit libero rerum! Magni ex, aliquam odit molestias provident ab!</p>
+          </div>
+          <div>
+
+            <h4 class="resume-section-name">My Experience</h4>
+            <h5 class="resume-item-title">Master in Computer Engineering</h5>
+            <h5 class="resume-item-info">Harvard University / 2015 - 2017</h5>
+            <p class="resuem-item-des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet dignissimos sit libero rerum! Magni ex, aliquam odit molestias provident ab!</p>
+          </div>
+          <div>
+
+            <h4 class="resume-section-name">My Experience</h4>
+            <h5 class="resume-item-title">Master in Computer Engineering</h5>
+            <h5 class="resume-item-info">Harvard University / 2015 - 2017</h5>
+            <p class="resuem-item-des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet dignissimos sit libero rerum! Magni ex, aliquam odit molestias provident ab!</p>
+          </div>
+        </div>
+      </section> -->
     </main>
     <footer></footer>
   </body>
